# SISE_RUCHE

./: .env.example  .gitignore  README.md  Rapport.md  add_geo_motherduckdb.py  backup_motherduck.py  clean_localisation.py  docker-compose.yaml  duck_to_mother.py  etl_mongo_mduck.py  geolocation_enrichment.py  loader_config.py  main.py  mongodb_utils.py  offres_service_public.json  offres_service_public_final.json  offres_service_public_tri.json  pyproject.toml  requirements.txt  requirements_mongodo_ftscraper.txt  requirements_streamlit.txt  scraper_francetravail.py  scrapper_LLM_pages.py  test_connexion_duckdb.py  test_creation_duckdb.py  tfidf_ml_data_filter.py  tri_offres.py
analyse_competences/: clustering.py  embeddings.py  extract.py  infos.md  pipeline_cooccurrence.py  run_pipeline.py
apec_selenium/: config.py  scraper.py
docker/: DockerFile.streamlit
documentation/: Rapport.md  SISE NLP_Text Mining_Rapport_Groupe6_RUCHE.tex  notice_TFIDF_ML_filtre_data_nondata.md  notice_france_travail_scraper.md  notice_moteur_recherche_semantique.md
etl/: clean_annee_niveau_exp.py  clean_localisation.py  clean_salary.py  config.py  config_etl.py  etl_mongo_mduck.py  etl_utils.py  etl_vectorization.py  geolocation_enrichment.py
jobteaser/: config.py  main.py  requirements.txt  scraper.py  test_jobteaser.py  test_list_funnel_jobteaser.py  test_pipeline.py  utils.py  utils_jt.py
mongo/: main_mongo.py
mongodb/: mongodb_load_jobteaser.py  reference_apec.py
ruche/: db.py
streamlit/: 1_home_page.py  2_cartographie.py  3_visualisation.py  4_add_offers.py  7_LLM.py  (+6 more)
(+83 files in other folders)
