[project]
name = "sise-ruche"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "certifi>=2023.11.17",
    "dnspython>=2.4.0",
    "pandas>=2.0.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "selenium>=4.15.0",
    "setuptools>=65.0.0",
    "streamlit>=1.30.0",
    "webdriver-manager>=4.0.1",
]
