[project]
name = "sise-ruche"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "certifi>=2023.11.17",
    "dnspython>=1.16.0",
    "duckdb>=0.10.0",
    "et-xmlfile>=2.0.0",
    "hdbscan>=0.8.38",
    "joblib>=1.5.3",
    "matplotlib>=3.9.0",
    "mistralai>=1.0.0",
    "networkx>=3.2",
    "nltk>=3.9.2",
    "numba>=0.60.0,<0.64",
    "numpy>=1.24,<2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "requests>=2.31.5",
    "scikit-learn>=1.3.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "selenium>=4.15.0",
    "sentence-transformers>=2.3.1",
    "setuptools>=65.0.0",
    "streamlit>=1.30.0",
    "streamlit-folium>=0.22.0",
    "umap-learn>=0.5.6",
    "webdriver-manager>=4.0.1",
]
